# plenty

./: .gitignore  cli.py  pyproject.toml  train_disease.py
app/db/: __init__.py  base.py  care.py  images.py  repertoire.py  taxonomy.py  utils.py
plenty/: climate.py  utils.py
plenty/api/: openweathermap.py  plantnet.py  util.py
plenty/care/: optimisers.py  planners.py
plenty/models/: disease.py  species.py  utils.py
tests/unit/: test_api_openweathermap.py  test_api_plantnet.py  test_app_care.py  test_app_repertoire.py  test_optimisers.py  test_planners.py  test_repertoire.py  test_species_model.py
tests/unit/api/: test_api_openweathermap.py
tests/unit/care/: test_care.py  test_optimisers.py  test_planners.py
