[tool.poetry]
name = "plenty"
version = "0.1.0"
description = ""
authors = ["Mustafa Samed Eskin"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.23.0"
pandas = "^1.4.3"
#tensorflow-deps = "2.9.0"
tensorflow-macos = "2.9.2"
tensorflow-metal = "0.5.0"
Pillow = "^9.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
